Expanded testing and written AccountStore tests
